--- a/1_Intro_Exploratory.ipynb
+++ b/1_Intro_Exploratory.ipynb
@@ -48,6 +48,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plotting First Graphs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
