--- a/Analysis/2_Skills_Demand.ipynb
+++ b/Analysis/2_Skills_Demand.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "[167546 rows x 2 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "[1419 rows x 3 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "['Data Analyst', 'Data Engineer', 'Data Scientist']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -446,21 +446,21 @@
        "9             Cloud Engineer         193"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Use original df to get the count of job titles\n",
-    "df_job_title_count = df_US['job_title_short'].value_counts().reset_index(name='jobs_total')\n",
+    "df_job_title_count = df_UK['job_title_short'].value_counts().reset_index(name='jobs_total')\n",
     "\n",
     "df_job_title_count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
        "[1419 rows x 5 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -667,13 +667,6 @@
     "fig.tight_layout(h_pad=.5)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
